@@ -1,3 +1,9 @@
+Wed Jul  5 10:28:42 MDT 2006  Christian Persch <chpe@gnome.org>
+
+	* src/fe-gnome/topic-label.c:
+	  - Change TopicLabel to use gobject's private mechanism, and fix a
+	    memory leak. (#346637)
+
 Sun Jul  2 17:17:52 MDT 2006  David Trowbridge <trowbrds@gmail.com>
 
 	* data/xchat-gnome.glade:
